frontend/kube/Base.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: fam-ns
