frontend/kube/Gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: fam-gateway
  namespace: fam-ns
spec:
  gatewayClassName: istio
  listeners:
    - name: http
      port: 3001
      protocol: HTTP
      allowedRoutes:
        namespaces:
          from: Same
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: fam-http-route
  namespace: fam-ns
spec:
  parentRefs:
    - name: fam-gateway
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: fam-service
          kind: Service
          port: 3000
