frontend/kube/Service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: fam-deployment
  namespace: fam-ns
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: fam
  template:
    metadata:
      labels:
        app.kubernetes.io/name: fam
    spec:
      serviceAccountName: fam-service-account
      restartPolicy: Always
      volumes:
        - name: fam-pv-storage
          persistentVolumeClaim:
            claimName: fam-pv-claim
      containers:
        - name: fam-instance
          image: docker.io/mediandxz/fam:latest
          resources:
            limits:
              memory: "256Mi"
              cpu: "0.5"
          ports:
            - containerPort: 3000
          imagePullPolicy: Always
          volumeMounts:
            - name: fam-pv-storage
              mountPath: /var/lib/fam
          securityContext:
            allowPrivilegeEscalation: false
            privileged: false
            runAsUser: 1001
            runAsGroup: 1001
          livenessProbe:
            httpGet:
              path: /
              port: 3000
            initialDelaySeconds: 10
            timeoutSeconds: 10
          readinessProbe:
            httpGet:
              path: /
              port: 3000
            initialDelaySeconds: 10
            timeoutSeconds: 10
---
apiVersion: v1
kind: Service
metadata:
  name: fam-service
  namespace: fam-ns
spec:
  selector:
    app.kubernetes.io/name: fam
  ports:
    - port: 3000
      targetPort: 3000
---
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: fam-gateway
  namespace: fam-ns
spec:
  gatewayClassName: istio
  listeners:
    - name: http
      port: 3001
      protocol: HTTP
      allowedRoutes:
        namespaces:
          from: Same
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: fam-http-route
  namespace: fam-ns
spec:
  parentRefs:
    - name: fam-gateway
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: fam-service
          kind: Service
          port: 3000
